--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 	--purple-button-padding: 0.8rem;
 }
 
-.heading-l {
+h1{
 	font-size: var(--Heading-L-height);
 	line-height: var(--Heading-L-height);
 	font-weight: var(--heading-weight);
@@ -35,7 +35,7 @@
 	text-align: center;
 }
 
-.heading-s {
+h3 {
 	font-size: var(--Heading-S-height);
 	line-height: var(--Heading-S-height);
 	font-weight: var(--heading-weight);
@@ -43,7 +43,7 @@
 	text-align: center;
 }
 
-.heading-xs {
+h4 {
 	font-size: var(--Heading-XS-height);
 	line-height: var(--Heading-XS-height);
 	font-weight: var(--heading-weight);
@@ -51,12 +51,32 @@
 	text-align: center;
 }
 
-.heading-m {
+p, li {
+    font-size: var(--Heading-XS-height);
+	line-height: var(--Heading-XS-height);
+	font-weight: var(--P-weight);
+	font-family: var(--P-family);
+	text-align: center; 
+}
+
+span {
+    font-weight: var(--heading-weight);
+}
+
+h2 {
 	font-size: var(--Heading-M-height);
 	line-height: var(--Heading-M-height);
 	font-weight: var(--heading-weight);
 	font-family: var(--Heading-family);
 	text-align: center;
+}
+
+button {
+    cursor: pointer ;
+}
+
+#purple-txt {
+    color: var(--Color-Purple);
 }
 
 body {
@@ -65,6 +85,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	background-color: var(--Color-Purple);
+    position: relative;
 }
 
 nav {
@@ -122,7 +143,6 @@ nav {
 }
 
 .grid-img {
-
     width: 100%;
 }
 
@@ -130,14 +150,16 @@ nav {
     width: 50%;
     height: 77.5vh;
     position: relative;
+    background-color: var(--Color-Black);
+    border-radius: 50px;
 }
 
 .grid-game {
     width: 96.5%;
     height: 100%;
     position: absolute;
-    top: 2.25%;
-    left: 1.85%;
+    top: 3.5%;
+    left: 1.6%;
     bottom: 0;
     right: 0;
     display: grid;
@@ -147,7 +169,7 @@ nav {
 }
 
 .grid-col {
-    gap: 11.9px;
+    gap: 26px;
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -155,11 +177,208 @@ nav {
 }
 
 .case {
-    width: 6vw;
-    height: 10vh;
+    width: 5.4vw;
+    height: 11vh;
     border: 3px solid #000000;
     box-shadow: 0px 5px 0px 3px #000000 inset;
     border-radius: 50%;
     align-self: center;
     background-color: var(--Color-Purple)
+}
+
+.timer-player{
+    border-radius: 90px 90px 20px 20px;
+    background-color: var(--Color-Red);
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 0px 0px #000000;
+    width: 13%;
+    height: 20vh;
+    position: absolute;
+    bottom: -25%;
+    right: 44%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    color: var(--Color-White);
+    gap: 10px;
+    display: none;
+}
+
+.player-2-timer-text {
+    display: none;
+}
+
+.winner-banner {
+    position: absolute;
+    width: 20%;
+    height: 25vh;
+    bottom: -25%;
+    right: 39.5%;
+    border-radius: 20px;
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 0px 0px #000000;
+    background-color: var(--Color-White);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+
+.player-winner-btn {
+    border-radius: 20px;
+    border: none;
+    background-color: var(--Color-Red);
+    color: var(--Color-White);
+    padding: 0.8rem;
+    width: 50%;
+    align-self: center;
+}
+
+.winner-color-p1 {
+    background-color: var(--Color-Red);
+}
+
+.winner-color-p2 {
+    background-color: var(--Color-Yellow);
+}
+
+.winner-player-1 {
+    display: block;
+}
+
+.winner-player-2 {
+    display: none;
+}
+
+#hidden-header, #hidden-main {
+    display: none;
+}
+
+#hidden {
+    display: none;
+}
+
+.rules-div {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--Color-Purple);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.rules {
+    width: 35%;
+    height: 80%;
+    gap: 30px;
+    background-color: var(--Color-White);
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border: 3px solid #000000;
+    border-radius: 40px;
+    align-items: start;
+}
+
+.rule-close-btn {
+    position: absolute;
+    border: 3px solid #000000;
+    box-shadow: 0px 5px 0px 0px #000000;
+    background-color: var(--Color-Red);
+    border-radius: 100%;
+    width: 15%;
+    height: 13%;
+    bottom: -5%;
+    left: 43%;
+}
+
+.rule-close-btn:hover {
+    border: 3px solid #5C2DD5;
+    box-shadow: 0px 5px 0px 0px #5C2DD5;
+}
+
+li {
+    text-align: start;
+}
+
+.span-li {
+    margin-right: 5%;
+}
+
+ol {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: 5%;
+}
+
+.rule-txt {
+    margin-left: 5%;
+}
+
+.rule-h {
+    align-self: center;
+}
+
+.rule-p {
+    text-align: start;
+    margin-left: 5%;
+}
+
+.menu-pause-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: var(--Color-Black);
+    z-index: 2;
+    opacity: 50%;
+}
+
+.menu-pause {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    width: 30%;
+    height: 55%;
+    background-color: var(--Color-Purple);
+    border-radius: 40px;
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 0px 0px #000000;
+    align-items: center;
+    gap: 35px;
+}
+
+#white-txt {
+    color: var(--Color-White);
+    margin-top: 5%;
+}
+
+.menu-pause-btn {
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 0px 0px #000000;
+    border-radius: 20px;
+    width: 80%;
+    height: 15%;
+    background-color: var(--Color-White);
+}
+
+.menu-pause-btn:hover {
+    border: 3px solid #5C2DD5;
+    box-shadow: 0px 10px 0px 0px #5C2DD5;
+}
+
+#red-btn {
+    background-color: var(--Color-Red);
+    color: var(--Color-White);
 }
